// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with 1 rows. 1`] = `
<div
  className="c-virtual-list-container"
  style={
    Object {
      "height": 300,
      "overflowX": "auto",
      "width": "100vw",
      "willChange": "transform",
    }
  }
>
  <div
    className="c-virtual-list"
    style={
      Object {
        "height": 100,
        "minHeight": "100%",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <span
      className="row-1"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      1
    </span>
  </div>
</div>
`;

exports[`should render with 30 rows. 1`] = `
<div
  style={
    Object {
      "height": 300,
      "overflowX": "auto",
      "width": "100vw",
      "willChange": "transform",
    }
  }
>
  <div
    style={
      Object {
        "height": 3000,
        "minHeight": "100%",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <span
      className="row-1"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      1
    </span>
    <span
      className="row-2"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 100,
        }
      }
    >
      2
    </span>
    <span
      className="row-3"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 200,
        }
      }
    >
      3
    </span>
    <span
      className="row-4"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 300,
        }
      }
    >
      4
    </span>
    <span
      className="row-5"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 400,
        }
      }
    >
      5
    </span>
    <span
      className="row-6"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 500,
        }
      }
    >
      6
    </span>
    <span
      className="row-7"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 600,
        }
      }
    >
      7
    </span>
    <span
      className="row-8"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 700,
        }
      }
    >
      8
    </span>
    <span
      className="row-9"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 800,
        }
      }
    >
      9
    </span>
    <span
      className="row-10"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 900,
        }
      }
    >
      10
    </span>
  </div>
</div>
`;

exports[`should render with height as px 1`] = `
<div
  className="c-virtual-list-container"
  style={
    Object {
      "height": 400,
      "overflowX": "auto",
      "width": "100vw",
      "willChange": "transform",
    }
  }
>
  <div
    className="c-virtual-list"
    style={
      Object {
        "height": 100,
        "minHeight": "100%",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <span
      className="row-1"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      1
    </span>
  </div>
</div>
`;

exports[`should render with reversed 30 rows. 1`] = `
<div>
  <div>
    <span
      className="row-21"
      style={
        Object {
          "bottom": 2000,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      21
    </span>
    <span
      className="row-22"
      style={
        Object {
          "bottom": 2100,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      22
    </span>
    <span
      className="row-23"
      style={
        Object {
          "bottom": 2200,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      23
    </span>
    <span
      className="row-24"
      style={
        Object {
          "bottom": 2300,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      24
    </span>
    <span
      className="row-25"
      style={
        Object {
          "bottom": 2400,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      25
    </span>
    <span
      className="row-26"
      style={
        Object {
          "bottom": 2500,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      26
    </span>
    <span
      className="row-27"
      style={
        Object {
          "bottom": 2600,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      27
    </span>
    <span
      className="row-28"
      style={
        Object {
          "bottom": 2700,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      28
    </span>
    <span
      className="row-29"
      style={
        Object {
          "bottom": 2800,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      29
    </span>
    <span
      className="row-30"
      style={
        Object {
          "bottom": 2900,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      30
    </span>
  </div>
</div>
`;
